tests/type-errors/invalid_rational_literal_nat.arl
archetype invalid_rational_literal_nat

variable r : rational = 2 / 0
